--- a/src/css/etc.css
+++ b/src/css/etc.css
@@ -17,6 +17,11 @@
   font-weight: bold !important;
   color: #1374b9 !important;
 }
+.no_h5 {
+  font-weight: bold !important;
+  color: black !important;
+  font-size: 17px !important;
+}
 .font-size-17-14 {
   font-size: 17px !important;
 }
@@ -63,10 +68,11 @@
 .table_s td {
   padding: 10px 20px 10px 20px !important;
   border-bottom: 1px solid black !important;
-}
-.table_s th {
-  text-align: center !important;
   border-right: 1px solid black !important;
+}
+.table_s th,
+.center-text {
+  text-align: center !important;
 }
 
 @media (max-width: 770px) {
