--- a/public/out.css
+++ b/public/out.css
@@ -11602,7 +11602,7 @@ figcaption {
   }
 
   .home-hero-section {
-    height: 100% !important;
+    height: auto !important;
   }
 
   /* .hero-slider-wrapper {
@@ -11630,9 +11630,9 @@ figcaption {
 
   .left-arrow {
     left: -60px;
-    top: auto;
+    top: 70% !important;
     right: 0%;
-    bottom: 60px;
+    bottom: 0% !important;
     background-color: rgba(255, 255, 255, 0.4);
     border: none;
   }
@@ -11648,9 +11648,9 @@ figcaption {
 
   .right-arrow {
     left: 0%;
-    top: auto;
+    top: 70% !important;
     right: -60px;
-    bottom: 60px;
+    bottom: 0% !important;
     border: none;
     background-color: rgba(255, 255, 255, 0.4);
   }
@@ -11814,16 +11814,16 @@ figcaption {
   .left-arrow {
     /* 여기 */
     left: 30px;
-    top: 140px !important;
+    top: 70% !important;
     right: auto;
-    bottom: auto;
+    bottom: 0% !important;
   }
 
   .right-arrow {
     left: 90px;
-    top: 140px !important;
+    top: 70% !important;
     right: auto;
-    bottom: auto;
+    bottom: 0% !important;
   }
 }
 
