--- a/out.css
+++ b/out.css
@@ -11600,10 +11600,10 @@ figcaption {
   .top-line {
     background-color: #fff;
   }
-
+/* 
   .home-hero-section {
     display: inline !important;
-  }
+  } */
 
   /* .hero-slider-wrapper {
     padding-top: 100px;
